// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`transform symbol > should not work with add value symbol 1`] = `
"import { signal as _signal$ } from "@estjs/server";
const $a = _signal$([1]);
$a.value.push(2);"
`;

exports[`transform symbol > should work with array 1`] = `
"import { signal as _signal$ } from "@estjs/server";
const $a = _signal$([1, 2, 3]);
$a.value = 2;"
`;

exports[`transform symbol > should work with array 2`] = `
"import { signal as _signal$ } from "@estjs/server";
const $a = _signal$([1, {
  a: 1
}, 3, 4]);
$a.value = 2;"
`;

exports[`transform symbol > should work with array 3`] = `
"import { signal as _signal$ } from "@estjs/server";
const $a = _signal$([1, 2, 3, 4, 5]);
$a.value = 2;"
`;

exports[`transform symbol > should work with array index  1`] = `
"import { signal as _signal$ } from "@estjs/server";
const $a = _signal$([1]);
console.log($a.value[0]);"
`;

exports[`transform symbol > should work with basic types 1`] = `
"import { signal as _signal$ } from "@estjs/server";
const $a = _signal$(false);
$a.value = 1;"
`;

exports[`transform symbol > should work with basic types 2`] = `
"import { signal as _signal$ } from "@estjs/server";
const $a = _signal$(true);
$a.value = 1;"
`;

exports[`transform symbol > should work with basic types 3`] = `
"import { signal as _signal$ } from "@estjs/server";
const $a = _signal$(0);
$a.value = 1;"
`;

exports[`transform symbol > should work with basic types 4`] = `
"import { signal as _signal$ } from "@estjs/server";
const $a = _signal$(1);
$a.value = 1;"
`;

exports[`transform symbol > should work with basic types 5`] = `
"import { signal as _signal$ } from "@estjs/server";
const $a = _signal$(1);
$a.value = 1;"
`;

exports[`transform symbol > should work with basic types 6`] = `
"import { signal as _signal$ } from "@estjs/server";
const $a = _signal$(123);
$a.value = 1;"
`;

exports[`transform symbol > should work with basic types 7`] = `
"import { signal as _signal$ } from "@estjs/server";
const $a = _signal$(null);
$a.value = 1;"
`;

exports[`transform symbol > should work with basic types 8`] = `
"import { signal as _signal$ } from "@estjs/server";
const $a = _signal$(undefined);
$a.value = 1;"
`;

exports[`transform symbol > should work with basic types 9`] = `
"import { signal as _signal$ } from "@estjs/server";
const $a = _signal$(NaN);
$a.value = 1;"
`;

exports[`transform symbol > should work with const function transform computed 1`] = `
"import { computed as _computed$ } from "@estjs/server";
const $a = _computed$(() => 1);
$a.value = 2;"
`;

exports[`transform symbol > should work with const function transform computed 2`] = `
"import { computed as _computed$ } from "@estjs/server";
const $a = _computed$(a => a + 1);
$a.value = 2;"
`;

exports[`transform symbol > should work with import value 1`] = `
"import { $a } from 'a';
import { b } from 'b';
console.log($a.value, b);"
`;

exports[`transform symbol > should work with let function transform computed 1`] = `
"import { signal as _signal$ } from "@estjs/server";
let $a = _signal$(() => 1);
$a.value = 2;"
`;

exports[`transform symbol > should work with let function transform computed 2`] = `
"import { signal as _signal$ } from "@estjs/server";
let $a = _signal$(a => a + 1);
$a.value = 2;"
`;

exports[`transform symbol > should work with object 1`] = `
"import { signal as _signal$ } from "@estjs/server";
const $a = _signal$({
  a: 1
});
$a.value = 2;"
`;

exports[`transform symbol > should work with object 2`] = `
"import { signal as _signal$ } from "@estjs/server";
const $a = _signal$({
  a: 1,
  b: 2
});
$a.value = 2;"
`;

exports[`transform symbol > should work with object 3`] = `
"import { signal as _signal$ } from "@estjs/server";
const $a = _signal$({
  a: 1,
  b: {
    c: 1
  }
});
$a.value = 2;"
`;

exports[`transform symbol > should work with object pattern 1`] = `
"const {
  $a,
  b
} = {
  $a: 1,
  b: 2
};
const [$c, d] = [1, 2];
const [{
  $d,
  e
}] = [{
  $d: 1,
  e: 2
}];
console.log($a.value, b);
console.log($c.value, d);
console.log($d.value, e);"
`;

exports[`transform symbol > should work with object pattern alias 1`] = `
"const {
  a: $a,
  b
} = {
  a: 1,
  b: 2
};
const [{
  d: $d
}] = [{
  d: 1,
  e: 2
}];
console.log($a.value, b);
console.log($d.value);"
`;
